<resources>
    <string name="app_name">PSE Planner</string>
    <string name="empty" />

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="cancel_button">Cancel</string>
    <string name="none_button">None</string>

    <string name="title_create_trade_plan">Create Trade Plan</string>
    <string name="title_update_trade_plan">Update Trade Plan</string>
    <string name="title_trade_plan">Trade Plan</string>

    <!-- Toolbar -->
    <string name="refresh_button">Refresh</string>
    <string name="search_button">Search</string>
    <string name="search_hint">Stock Symbol</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>

    <!-- Navigation Menu Strings -->
    <string name="nav_trade_plan">Trade Plan</string>
    <string name="nav_ticker">Ticker</string>
    <string name="nav_calculator">Calculator</string>
    <string name="nav_settings">Settings</string>

    <!-- Settings -->
    <string name="settings_auto_refresh">Auto Refresh</string>
    <string name="interval_dialog_title">Interval</string>
    <string name="settings_refresh_interval">Refresh Interval In Seconds </string>
    <string name="settings_notify_targe_price">Notify On Target Price</string>
    <string name="settings_notify_stop_loss">Notify On Stop Loss</string>
    <string name="settings_notify_time_stop">Notify On Time Stop</string>
    <string name="settings_notify_with_sound_effect">Notfiy With Sound Effect</string>

    <!-- Labels -->
    <string name="label_date_planned">Date Planned : </string>
    <string name="label_days_since_planned">Days Since Planned : </string>

    <string name="label_buy_price">Buy Price : </string>
    <string name="label_shares">Shares : </string>
    <string name="label_price_to_break_even">Price To Break-Even : </string>
    <string name="label_buy_gross_amount">Buy Gross Amount : </string>
    <string name="label_buy_net_amount">Buy Net Amount : </string>
    <string name="label_additional_fees">Additional Fees : </string>
    <string name="label_deductions">Deductions : </string>
    <string name="label_brokers_commission">Broker\'s Commission : </string>
    <string name="label_brokers_commission_vat">Broker\'s Commission Vat : </string>
    <string name="label_clearing_fee">Clearing Fee : </string>
    <string name="label_transaction_fee">Transaction Fee : </string>
    <string name="label_sales_tax">Sales Tax : </string>
    <string name="label_total">Total : </string>
    <string name="label_sell_price">Sell Price : </string>
    <string name="label_sell_gross_amount">Sell Gross Amount : </string>
    <string name="label_sell_net_amount">Sell Net Amount : </string>
    <string name="label_gain_loss_amount">Gain/Loss Amount : </string>
    <string name="label_gain_loss_percent">Gain/Loss % : </string>
    <string name="label_price">Price : </string>
    <string name="label_cash_dividend">Cash Dividend : </string>
    <string name="label_yield">Yield : </string>
    <string name="label_yield_percent">Yield % : </string>
    <string name="label_total_amount">Total Amount : </string>
    <string name="label_high">High : </string>
    <string name="label_low">Low : </string>
    <string name="label_midpoint">Midpoint : </string>
    <string name="label_stock">Stock : </string>
    <string name="label_projected">Projected : </string>
    <string name="label_entry">Entry : </string>
    <string name="label_tranche">%1$s Tranche : </string>
    <string name="label_weight">% Weight : </string>
    <string name="label_entry_date">Entry Date : </string>
    <string name="label_stop_date">Stop Date : </string>
    <string name="label_stop_loss">Stop Loss : </string>
    <string name="label_target">Target : </string>
    <string name="label_capital">Capital : </string>
    <string name="label_current_price">Current Price : </string>
    <string name="label_average_price">Average Price : </string>
    <string name="label_gain_loss">Gain/Loss : </string>
    <string name="label_holding_period">Holding Period : </string>
    <string name="label_total_shares">Total Shares : </string>
    <string name="label_gain_target">Gain (Target) : </string>
    <string name="label_loss_stop_loss">Loss (Stop Loss) : </string>
    <string name="label_days_to_stop_date">Days To Stop Date : </string>
    <string name="label_risk_reward">Risk-Reward : </string>
    <string name="label_percent_of_capital">% Of Capital : </string>
    <string name="label_empty_ticker_list">Refresh to load tickers.</string>
    <string name="label_empty_trade_plan_list">You currently do not have any trade plan.</string>
    <string name="label_proxy">Proxy</string>
    <string name="label_no_proxy">No Proxy</string>
    <string name="label_http">http://</string>
    <string name="label_colon">:</string>
    <string name="label_status">Status : </string>

    <!-- Values -->
    <string name="default_value">0</string>
    <string name="default_value_percent">0%</string>
    <string name="one_hundred_value">100</string>

    <!-- ImageView Content Description -->
    <string name="hide_arrow">hide</string>
    <string name="expand_arrow">expand</string>
    <string name="add_button">add</string>
    <string name="remove_button">remove</string>
    <string name="check_button">check</string>
    <string name="ticker_add_icon">add or added</string>

    <!-- Ticker Header -->
    <string name="ticker_stock">Stock</string>
    <string name="ticker_price">Price</string>
    <string name="ticker_change">Change</string>
    <string name="ticker_percent_change">% Change</string>

    <!-- Button -->
    <string name="button_add_tranche">Add Tranche</string>
    <string name="button_add_trade_plan">Add Trade Plan</string>
    <string name="button_update_trade_plan">Update Trade Plan</string>

    <string name="create_trade_plan_prompt">Risk-Reward is just %1$.2f\nAre you sure of this trade?</string>
    <string name="delete_trade_plan_prompt">Are you sure you want to delete your trade plan for %1$s?</string>

    <string name="input_blank">Please input %1$s</string>
    <string name="last_updated">Last Updated: %1$s</string>

    <!-- Error Messages -->
    <string name="midpoint_invalid_input">High value should not be less than low value</string>
    <string name="boardlot_invalid">The price and shares is not a valid boardlot</string>
    <string name="tranche_weight_invalid">The tranche weight should equal to 100%</string>
    <string name="buy_greater_than_capital">Not enough capital for the trade</string>
    <string name="stoploss_invalid">Stop Loss cannot be greater than or equal the average price %1$.2f</string>
    <string name="target_invalid">Target price cannot be less than or equal the average price %1$.2f</string>
    <string name="entry_greater_than_stop_date">Entry date must not be greater than or equal to stop date</string>
    <string name="entry_date_given_no_tranche_executed">Entry date is set, there must be at least one tranche executed.</string>
    <string name="entry_date_not_given_tranche_executed">Entry date is not set, there must be no tranche executed.</string>

    <string-array name="refresh_intervals">
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>
</resources>
