<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GridLayoutLabelValuePair"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="20dp">

    <TextView
        android:id="@+id/label_tranche"
        style="@style/TextViewLabel"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/label_tranche" />

    <ImageView
        android:id="@+id/imageview_remove_tranche"
        style="@style/ImageViewRemove"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/remove_button" />

    <TextView
        android:id="@+id/label_entry_price"
        style="@style/TextViewLabel.SubLabel"
        android:layout_marginStart="40dp"
        android:labelFor="@id/edittext_entry_price"
        android:text="@string/label_price" />

    <EditText
        android:id="@+id/edittext_entry_price"
        style="@style/TextViewLabel.EditText.Price" />

    <TextView
        android:id="@+id/label_shares"
        style="@style/TextViewLabel.SubLabel"
        android:layout_marginStart="40dp"
        android:labelFor="@id/edittext_tranche_shares"
        android:text="@string/label_shares" />

    <EditText
        android:id="@+id/edittext_tranche_shares"
        style="@style/TextViewLabel.EditText.Shares"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/label_status"
        style="@style/TextViewLabel.SubLabel"
        android:layout_marginStart="40dp"
        android:text="@string/label_status" />

    <CheckBox
        android:id="@+id/checkbox_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:checked="true"
        android:text="@string/empty" />

    <View
        style="@style/Divider"
        android:layout_columnSpan="2" />
</GridLayout>