<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <GridLayout
        style="@style/GridLayoutLabelValuePair">

        <TextView
            android:id="@+id/label_high"
            style="@style/TextViewLabel"
            android:layout_marginBottom="14dp"
            android:text="@string/label_high"/>

        <EditText
            android:id="@+id/edittext_high"
            style="@style/TextViewLabel.EditText.Price"/>

        <View
            style="@style/Divider2"
            android:layout_columnSpan="2"
            />

        <TextView
            android:id="@+id/label_low"
            style="@style/TextViewLabel"
            android:layout_marginBottom="14dp"
            android:text="@string/label_low"/>

        <EditText
            android:id="@+id/edittext_low"
            style="@style/TextViewLabel.EditText.Price"/>

        <View
            style="@style/Divider2"
            android:layout_columnSpan="2"
            />

        <TextView
            android:id="@+id/label_midpoint"
            style="@style/TextViewLabel"
            android:text="@string/label_midpoint"/>

        <TextView
            android:id="@+id/textview_midpoint"
            style="@style/TextViewLabel"
            android:text="@string/default_value"/>

        <View
            style="@style/Divider2"
            android:layout_columnSpan="2"
            />
    </GridLayout>

</ScrollView>